--- a/generic_chart_client/src/main/webapp/assets/self-owned/html/chart/modal/modal_content_new_chart.html
+++ b/generic_chart_client/src/main/webapp/assets/self-owned/html/chart/modal/modal_content_new_chart.html
@@ -18,7 +18,7 @@
     if(chart && chartViewModel){
 
       // ChartPOJO.newChart('main');
-      ChartPOJO.cleanChart('main');
+      ChartPOJO.cleanChart('main_chart');
       chartViewModel.chart = null;
       chartViewModel.data = null;
       ModalUtil.modal_close('popupModalPro');
