--- a/generic_chart_client/src/main/webapp/assets/self-owned/html/chart/tutorial_wordCloud.html
+++ b/generic_chart_client/src/main/webapp/assets/self-owned/html/chart/tutorial_wordCloud.html
@@ -3,7 +3,7 @@
 
 
 <span class="cell_div_view markdown-body" ><h2 id="">词云</h2>
-<p>词云，又称文字云，是文本数据的视觉表示，由词汇组成类似云的彩色图形，用于展示大量文本数据。通常用于描述网站上的关键字元数据（标签），或可视化自由格式文本。 每个词的重要性以字体大小或颜色显示。</p>
+    <p>词云，又称文字云，是文本数据的视觉表示，由词汇组成类似云的彩色图形，用于展示<strong>大量文本数据</strong>。通常用于描述网站上的关键字元数据（标签），或可视化自由格式文本。 每个词的重要性以字体大小或颜色显示。</p>
     <h3 id="-1">数据模型样例</h3>
     <ul>
 
@@ -93,7 +93,6 @@
 </span>
 
 <script>
-    var chart;
     function initialize() {
         var dataCloud = {
             "cloudData":
@@ -117,7 +116,7 @@
                         {"name": " 哪", "value": " 23"},
                         {"name": " 说", "value": " 31"},
                         {"name": " 全面", "value": " 15"},
-                                                {"name": "澎湃", "value": "25"},
+                        {"name": "澎湃", "value": "25"},
                         {"name": " 暴晒", "value": " 14"},
                         {"name": " 套件", "value": "13"},
                         {"name": " 有", "value": " 24"},
@@ -136,7 +135,7 @@
                         {"name": " 哪", "value": " 23"},
                         {"name": " 说", "value": " 31"},
                         {"name": " 全面", "value": " 15"},
-                                                {"name": "澎湃", "value": "25"},
+                        {"name": "澎湃", "value": "25"},
                         {"name": " 暴晒", "value": " 14"},
                         {"name": " 套件", "value": "13"},
                         {"name": " 有", "value": " 24"},
@@ -154,7 +153,8 @@
                         {"name": " 互联", "value": " 22"},
                         {"name": " 哪", "value": " 23"},
                         {"name": " 说", "value": " 31"},
-                        {"name": " 全面", "value": " 15"},                        {"name": "澎湃", "value": "25"},
+                        {"name": " 全面", "value": " 15"},                        
+                        {"name": "澎湃", "value": "25"},
                         {"name": " 暴晒", "value": " 14"},
                         {"name": " 套件", "value": "13"},
                         {"name": " 有", "value": " 24"},
@@ -172,35 +172,17 @@
                         {"name": " 互联", "value": " 22"},
                         {"name": " 哪", "value": " 23"},
                         {"name": " 说", "value": " 31"},
-                        {"name": " 全面", "value": " 15"},
-                        
+                        {"name": " 全面", "value": " 15"},                      
                         {"name": " 搞定", "value": " 12"}
                     ],
             "cloudDiv": "tutorial_chart"
         };
-
-//        var createRandomItemStyle1 = function (params) {
-//            //此方法与下方配置中的第一个textStle下的color等同  
-//                    var colors = ['#fda67e', '#81cacc', '#cca8ba', "#88cc81", "#82a0c5", '#fddb7e', '#735ba1', '#bda29a', '#6e7074', '#546570', '#c4ccd3'];
-//            return colors[parseInt(Math.random() * 10)];
-//        }
-
-//        var createRandomItemStyle2 = function () {
-//            var colorArr = ['#fda67e', '#81cacc', '#cca8ba', "#88cc81", "#82a0c5", '#fddb7e', '#735ba1', '#bda29a', '#6e7074', '#546570', '#c4ccd3'];
-//            var flag = parseInt(Math.random() * 10);
-//            return {
-//                normal: {
-//                    fontFamily: '微软雅黑',
-//                    color: colorArr[flag]
-//                }
-//            };
-//        }
         function _setWordCloud(cloudData) {
             var option = {
                 series: [
                     {
                         type: 'wordCloud',
-                        shape: 'ellipse',
+                        shape: 'pentagon',
                         gridSize: 8,
                         textStyle: {
                             normal: {
@@ -211,30 +193,18 @@
                                 }
                             }
                       },
-                        /*注释一：*/
-                        // textStyle:createRandomItemStyle2(),  
-
-
-                        /*注释二：*/
-                        /*textStyle: { 
-                         normal: { 
-                         fontFamily: '微软雅黑', 
-                         color: createRandomItemStyle1() 
-                         } 
-                         },*/
                         data: cloudData
                     }
                 ]
             };
             return option;
-        }
-        ;
-
+        };
 //词云图初始化  
         function initWordCloud(wordCloudData) {
             var option = _setWordCloud(wordCloudData.cloudData);
-            var myChart = echarts.init(document.getElementById(wordCloudData.cloudDiv));
-            myChart.setOption(option);
+            chart = echarts.init(document.getElementById(wordCloudData.cloudDiv));
+            chart.setOption(option);
+            chartCache['tutorial_chart'] = chart;
         }
 
         initWordCloud(dataCloud);
