--- a/generic_chart_client/src/main/webapp/assets/self-owned/html/chart/config_bar.html
+++ b/generic_chart_client/src/main/webapp/assets/self-owned/html/chart/config_bar.html
@@ -85,6 +85,7 @@
     var data_name = $('#add_name_input').val();
     var data_value = $('#add_value_input').val().split(',');
     if (data_name && data_value && chartViewModel && chartViewModel.chart) {
+        debugger
       chartViewModel.chart = ChartPOJO.addSeries(chartViewModel.chart, data_name, 'bar', data_value);
     }
   }
