--- a/generic_chart_client/src/main/webapp/assets/self-owned/html/chart/tutorial_bar.html
+++ b/generic_chart_client/src/main/webapp/assets/self-owned/html/chart/tutorial_bar.html
@@ -19,10 +19,10 @@
 
 
 <script>
-  var chart;
   function initialize() {
     chart = ChartPOJO.generate_default_chart('tutorial_chart');
-
+    chartCache['tutorial_chart'] = chart;
+    
     var x_Axis_data = [2013, 2014, 2015, 2016, 2017];
     var series_name = 'GDP';
     var series_data = [20, 30, 30, 50, 80];
