--- a/generic_chart_client/src/main/webapp/assets/self-owned/html/chart/tutorial_boxplot.html
+++ b/generic_chart_client/src/main/webapp/assets/self-owned/html/chart/tutorial_boxplot.html
@@ -19,10 +19,10 @@
 
 
 <script>
-  var chart;
   function initialize() {
     chart = ChartPOJO.generate_default_chart('tutorial_chart');
-
+    chartCache['tutorial_chart'] = chart;
+    
     var names = ['white','black'];
     var series_data = [[1,2,3,10,5,6],[2,3,14,5,6,7]];
     chart = Boxplot_ChartPOJO.initialize_chart(chart,series_data,names);
